fixed backface-visibility bug

--- a/client/src/Components/Card/Card.module.css
+++ b/client/src/Components/Card/Card.module.css
@@ -1,101 +1,100 @@
 .Card {
-    margin: 5% 20px;
-    position: relative;
-    height: 27rem;
-    width: 18rem;
-    perspective: 2000px;
-    margin-bottom: 10%;
+  margin: 5% 20px;
+  position: relative;
+  height: 27rem;
+  width: 18rem;
+  perspective: 2000px;
+  margin-bottom: 10%;
 }
 
 .Card a {
-    display: flex;
-    flex-direction: column;
-    justify-self: flex-end;
-    align-self: center;
-    font-size: 1.4rem;
-    margin-bottom: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-self: flex-end;
+  align-self: center;
+  font-size: 1.4rem;
+  margin-bottom: 3%;
 }
 .Card a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 .Card:hover .Front {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 .Card:hover .Back {
-    transform: rotateY(0deg);
+  transform: rotateY(0deg);
 }
 .Card span {
-    font-size: 0.6rem;
-    /* line-height: 0.5rem; */
+  font-size: 0.6rem;
 }
 .CardSide {
-    box-shadow: 1px 1px 3px 1px #ccc;
-    transition: all 0.9s;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    /* transform: rotateY(0deg); */
-    backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d;
-    justify-content: flex-start;
-    border-radius: 20px;
-    -webkit-perspective: 0;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    visibility: visible;
+  box-shadow: 1px 1px 3px 1px #ccc;
+  transition: all 0.9s;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  justify-content: flex-start;
+  border-radius: 20px;
+}
+.Front {
+  transform: rotateY(0deg);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  z-index: 1;
 }
 
 .Back {
-    transform: rotateY(180deg);
-    /* background-color: rgb(155, 180, 209); */
-    font-weight: bold;
-    color: rgb(32, 32, 172);
-    font-family: 'Poppins', sans-serif;
-    background-color: #bdd4e7;
-    background-image: linear-gradient(
-        315deg,
-        #acc0d1 0%,
-        #8693ab 0%
-    ) !important;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transform: rotateY(180deg);
+  font-weight: bold;
+  color: rgb(32, 32, 172);
+  font-family: "Poppins", sans-serif;
+  background-color: #bdd4e7;
+  background-image: linear-gradient(315deg, #acc0d1 0%, #8693ab 0%) !important;
 }
 .Image {
-    height: 100%;
-    width: 100%;
-    border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
 }
 
 .Infos {
-    margin-top: 10px;
-    height: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0 10%;
+  margin-top: 10px;
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 10%;
 }
 
 .Title {
-    font-size: 1.4rem;
-    margin: 0px;
-    margin-bottom: 5%;
-    color: rgb(15, 15, 139);
-    font-family: 'Goblin One', cursive;
+  font-size: 1.4rem;
+  margin: 0px;
+  margin-bottom: 5%;
+  color: rgb(15, 15, 139);
+  font-family: "Goblin One", cursive;
 }
 .Description {
-    font-size: 0.9rem;
-    margin-bottom: 5%;
+  font-size: 0.9rem;
+  margin-bottom: 5%;
 }
 .Techs {
-    margin-bottom: 5%;
-    font-size: 0.8rem;
+  margin-bottom: 5%;
+  font-size: 0.8rem;
 }
 .Video {
-    width: 95%;
-    border: 0.7px solid blue;
+  width: 95%;
+  border: 0.7px solid blue;
 }
 .Buttons {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 2%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 2%;
 }
